modified:   README.md 	modified:   config.ini 	modified:   outputdata.py 	modified:   sshrank.py

--- a/config.ini
+++ b/config.ini
@@ -12,10 +12,13 @@ mysqlserv=localhost
 mysqlpass=blargpass
 
 #how many IPs total do you want to show? default 15
-total_ip=10
+total_ip=15
 #how many IPs do yo uwant to do extra stats on (eg top 10)
-stats_ip=5
+stats_ip=15
 
 #how many user names to you wnat listed?
 user_cnt=5
 
+
+#do rdns thangs
+rdns=yes
