changed things i guess

--- a/config.ini
+++ b/config.ini
@@ -12,9 +12,9 @@ mysqlserv=localhost
 mysqlpass=blargpass
 
 #how many IPs total do you want to show? default 15
-total_ip=15
+total_ip=10
 #how many IPs do yo uwant to do extra stats on (eg top 10)
-stats_ip=15
+stats_ip=10
 
 #how many user names to you wnat listed?
 user_cnt=5
@@ -22,3 +22,8 @@ user_cnt=5
 
 #do rdns thangs
 rdns=yes
+#since there will be a log of the rdns info, updating every so
+#often is a good idea;
+#when an IP is in the topX when the rdns script runs
+#it'll check again when the current info is X seconds old
+rdns_age=18
