Moved parameters to config file, updated readme
Renamed config.ini to config.conf (personal preference)
Moved variables to config.conf instead of scattered throughout the other
files
Updated readme for readability and more steps for installation

--- a/config.conf
+++ b/config.conf
@@ -4,21 +4,25 @@
 # Set debugging. 1 is on, 0 is off
 debugging=0
 
-# Absolute path to SSH-Rank on your file system
-#sqlclassPath=/home/user/ssh-rank/
+# Absolute path to SSH-Rank on your file system. Change to 
+# match where you downloaded SSH-Rank. Include the trailing /
+#sqlclassPath=/home/user/git/SSH-Ranking/
 sqlclassPath=/home/subdriven/projects/ssh-rank/
 
+
 [logs]
-# Location of auth.log or the log you want to monitor 
+# Location of auth.log or the log you want to monitor. 
+# Include the trailing /
 authlogpath=/var/log/
 
 # Name of log you want to monitor. 
 # For Debian-based systems you probably want auth.log. 
-# For Redhat systems, secure
+# For Red Hat systems, secure
 logname=secure
 
 # User who can read the log file; probably will be root
 userneed=root
+
 
 [sql]
 # SQL Settings
@@ -28,7 +32,15 @@ sqluser=sshrank
 sqlserv=localhost
 sqlpass=blargpass
 
+
 [web]
+# To run the web server portion, you can either run 
+# it on port 80 as root (not really recommended) or 
+# you can run it on an unprivileged port (eg: port 5000). 
+# Change this to suit your needs
+
+webUI_port=5000
+
 # How many IPs total do you want to show? Default 15
 total_ip=10
 
@@ -38,12 +50,6 @@ stats_ip=20
 # How many user names to you want listed?
 user_cnt=5
 
-# To run the web server portion, you can either run 
-# it on port 80 as root (not really recommended) or 
-# you can run it on an unprivileged port (eg: port 5000). 
-# Change this to suit your needs
-
-webUI_port=5000
 
 #do rdns thangs
 rdns=yes
