adding things for the port scanner

--- a/config.ini
+++ b/config.ini
@@ -17,7 +17,7 @@ authlogpath=/var/log/
 # Name of log you want to monitor. 
 # For Debian-based systems you probably want auth.log. 
 # For Red Hat systems, secure
-logname=secure
+logname=auth.log
 
 # User who can read the log file; probably will be root
 userneed=root
@@ -30,6 +30,16 @@ sqlservertype=mysql
 sqluser=sshrank
 sqlserv=localhost
 sqlpass=blargpass
+
+[portscan]
+# for the port scanning script; at some point its going to be automated
+# and update on its own on, for now it just a on off run
+on=True
+ports=21,22,53,80,443,2082,2083,2086,8880,10000
+#in order: ftp, ssh, dns, http, https, cpanel, cpanel ssl, whm, plesk, webmin
+
+#update when current results are older then <age> hours
+age=24
 
 
 [web]
