--- a/config.ini
+++ b/config.ini
@@ -35,6 +35,9 @@ sqlpass=blargpass
 # for the port scanning script; at some point its going to be automated
 # and update on its own on, for now it just a on off run
 on=True
+
+#no spaces! please
+#if you change ports; you're going to have to edit sqlcass.py
 ports=21,22,53,80,443,2082,2083,2086,8880,10000
 #in order: ftp, ssh, dns, http, https, cpanel, cpanel ssl, whm, plesk, webmin
 
