--- a/config.ini
+++ b/config.ini
@@ -2,7 +2,7 @@
 # SSH-Rank Configuration File
 
 # Set debugging. 1 is on, 0 is off
-debugging=0
+debugging=1
 
 # Absolute path to SSH-Rank on your file system. Change to 
 # match where you downloaded SSH-Rank. Include the trailing /
@@ -51,22 +51,23 @@ age=24
 # you can run it on an unprivileged port (eg: port 5000). 
 # Change this to suit your needs
 
-webUI_port=80
+webUI_port=10080
 
 # How many IPs total do you want to show? Default 15
 total_ip=20
 
 # How many IPs do yo uwant to do extra stats on (eg top 10)
-stats_ip=20
+stats_ip=60
 
 # How many user names to you want listed?
 user_cnt=5
 
-
+#where to look for xml files from nmap scans
+nmap_xml=/home/pronto/git/SSH-Ranking/web/static/xml/
 #do rdns thangs
 rdns=yes
 #since there will be a log of the rdns info, updating every so
 #often is a good idea;
 #when an IP is in the topX when the rdns script runs
 #it'll check again when the current info is X seconds old
-rdns_age=18
+rdns_age=48
