added line for screenshots

--- a/config.ini
+++ b/config.ini
@@ -8,6 +8,8 @@ debugging=1
 # match where you downloaded SSH-Rank. Include the trailing /
 sqlclassPath=/home/pronto/git/SSH-Ranking/
 
+screenshotpath=/home/pronto/git/SSH-Ranking/web/static/screens/
+
 
 [logs]
 # Location of auth.log or the log you want to monitor. 
